--- a/src/main/webapp/Before/w20220808/attribute.html
+++ b/src/main/webapp/Before/w20220808/attribute.html
@@ -18,7 +18,7 @@
     <a href="http://google.com">google.com</a>
     <a href="http://naver.com">naver.com</a>
     상대경로 <br>
-    <img src="../../images/cat_1.jpg" alt=""><br>
+    <img src="../images/cat_1.jpg" alt=""><br>
     절대경로 <br>
     <img src="C:\project\aws\ViewWork\HtmlProject\images\cat_1.jpg" alt=""><br>
     url 경로 <br>
